# embedded-isp-pipeline

./: CMakeLists.txt  Dockerfile  README.md
.github/workflows/: ci.yml
docs/: knowledge.md
include/analysis/: auto_exposure.hpp  dead_pixel_correct.hpp  histogram.hpp
include/color/: ccm.hpp  color_convert.hpp  hist_equalize.hpp
include/core/: demosaic.hpp  gamma.hpp  memory_pool.hpp  pipeline.hpp  types.hpp  white_balance.hpp
include/edge/: canny.hpp  sobel.hpp
include/filter/: gaussian_blur.hpp  median_filter.hpp  sharpening.hpp
include/geometry/: distortion_correct.hpp  image_resize.hpp
requirements/: SRS.md  traceability_matrix.md
sim/: bayer_gen.py  visualize.py
src/analysis/: auto_exposure.cpp  dead_pixel_correct.cpp  histogram.cpp
src/color/: ccm.cpp  color_convert.cpp  hist_equalize.cpp
src/core/: demosaic.cpp  gamma.cpp  main.cpp  memory_pool.cpp  pipeline.cpp  white_balance.cpp
src/edge/: canny.cpp  sobel.cpp
src/filter/: gaussian_blur.cpp  median_filter.cpp  sharpening.cpp
src/geometry/: distortion_correct.cpp  image_resize.cpp
tests/: test_registry.md
tests/integration/: test_pipeline_e2e.cpp
tests/unit/: test_demosaic.cpp  test_gamma.cpp  test_memory_pool.cpp  test_sobel.cpp  test_white_balance.cpp
